[package]
name = "pixl"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38"
ash-window = "0.13"
cpal = "0.17.1"
glam = "0.31"
interp = "2.1.1"
minifb = "0.28"
raw-window-handle = "0.6"
stb_image = "0.3.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
debug = true
