[package]
name = "pixl"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38"
ash-window = "0.13"
bitflags = "2.10.0"
cpal = "0.17.1"
gilrs = "0.11.1"
glam = { version = "0.31", features = [ "serde" ] }
interp = "2.1.1"
minifb = "0.28"
raw-window-handle = "0.6"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stb_image = "0.3.0"
zip = "7.4.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
debug = true
